--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -19,6 +19,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Buffer.Attack.StepForward",DevComment="")
 +GameplayTagList=(Tag="Event.Montage",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.Shared.Dodge",DevComment="")
++GameplayTagList=(Tag="Event.Montage.Shared.ParryBreak",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.Shared.WeaponHit",DevComment="")
 
 
