--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -3,6 +3,7 @@
 ImportTagsFromConfig=True
 WarnOnInvalidTags=True
 FastReplication=False
+InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Ability.Melee",DevComment="")
@@ -22,5 +23,14 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Event.Montage.Shared.ParryBreak",DevComment="")
 +GameplayTagList=(Tag="Event.Montage.Shared.WeaponHit",DevComment="")
 +GameplayTagList=(Tag="Immune.Physical",DevComment="")
++GameplayTagList=(Tag="ItemType.Armour.BodyArmour",DevComment="")
++GameplayTagList=(Tag="ItemType.Armour.Boots",DevComment="")
++GameplayTagList=(Tag="ItemType.Armour.Gloves",DevComment="")
++GameplayTagList=(Tag="ItemType.Armour.Helmet",DevComment="")
++GameplayTagList=(Tag="ItemType.Misc.Amulet",DevComment="")
++GameplayTagList=(Tag="ItemType.Misc.Belt",DevComment="")
++GameplayTagList=(Tag="ItemType.Misc.Currency",DevComment="")
++GameplayTagList=(Tag="ItemType.Misc.Ring",DevComment="")
++GameplayTagList=(Tag="ItemType.Weapon.TwoHandedMace",DevComment="")
 
 
