UI and Inventory
-> Inventory Sys

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -14,7 +14,7 @@ InsertPack=(PackSource="StarterContent.upack,PackName="StarterContent")
 +PrimaryAssetTypesToScan=(PrimaryAssetType="Potion",AssetBaseClass=/Script/Soul_Like_ACT.SoulPotionItem,bHasBlueprintClasses=False,bIsEditorOnly=False,Directories=((Path="/Game/DataAssets/Potions")),SpecificAssets=,Rules=(Priority=-1,bApplyRecursively=True,ChunkId=-1,CookRule=Unknown))
 +PrimaryAssetTypesToScan=(PrimaryAssetType="Jewel",AssetBaseClass=/Script/Soul_Like_ACT.SoulJewelItem,bHasBlueprintClasses=False,bIsEditorOnly=False,Directories=((Path="/Game/DataAssets/Jewels")),SpecificAssets=,Rules=(Priority=-1,bApplyRecursively=True,ChunkId=-1,CookRule=Unknown))
 +PrimaryAssetTypesToScan=(PrimaryAssetType="Weapon",AssetBaseClass=/Script/Soul_Like_ACT.SoulWeaponItem,bHasBlueprintClasses=False,bIsEditorOnly=False,Directories=((Path="/Game/DataAssets/Weapons")),SpecificAssets=,Rules=(Priority=-1,bApplyRecursively=True,ChunkId=-1,CookRule=Unknown))
-+PrimaryAssetTypesToScan=(PrimaryAssetType="Armour",AssetBaseClass=/Script/Soul_Like_ACT.SoulArmourItem,bHasBlueprintClasses=False,bIsEditorOnly=False,Directories=(()),SpecificAssets=,Rules=(Priority=-1,bApplyRecursively=True,ChunkId=-1,CookRule=Unknown))
++PrimaryAssetTypesToScan=(PrimaryAssetType="Armour",AssetBaseClass=/Script/Soul_Like_ACT.SoulArmourItem,bHasBlueprintClasses=False,bIsEditorOnly=False,Directories=((Path="/Game/DataAssets/Armours")),SpecificAssets=,Rules=(Priority=-1,bApplyRecursively=True,ChunkId=-1,CookRule=Unknown))
 bOnlyCookProductionAssets=False
 bShouldManagerDetermineTypeAndName=False
 bShouldGuessTypeAndNameInEditor=True
