--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -32,7 +32,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Game/Blueprints/SoulGameInstance.SoulGameInstance_C
 GameDefaultMap=/Game/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=None
@@ -82,5 +82,4 @@ PhysXTreeRebuildRate=10
 +PhysicalSurfaces=(Type=SurfaceType1,Name="Grass")
 +PhysicalSurfaces=(Type=SurfaceType2,Name="Rock")
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
 
