--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,6 +10,7 @@ PreferredLandscapeOrientation=LandscapeLeft
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/Soul_Like_ACT")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="Soul_Like_ACTGameMode")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="Soul_Like_ACTCharacter")
+AssetManagerClassName=/Script/Soul_Like_ACT.SoulAssetManager
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -37,6 +38,9 @@ GameDefaultMap=/Game/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=None
 GlobalDefaultServerGameMode=None
+
+[/Script/WindowsTargetPlatform.WindowsTargetSettings]
+Compiler=VisualStudio2019
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -83,6 +87,4 @@ PhysXTreeRebuildRate=10
 +PhysicalSurfaces=(Type=SurfaceType2,Name="Rock")
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
 
-[/Script/WindowsTargetPlatform.WindowsTargetSettings]
-Compiler=VisualStudio2019
 
