--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -83,8 +83,9 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Targeting",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightThumbstick)
 +ActionMappings=(ActionName="Targeting",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Tab)
 +ActionMappings=(ActionName="LMB",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=None)
-+ActionMappings=(ActionName="Menu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_Special_Right)
-+ActionMappings=(ActionName="Menu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=BackSpace)
++ActionMappings=(ActionName="PlayerPanel",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_Special_Right)
++ActionMappings=(ActionName="PlayerPanel",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=P)
++ActionMappings=(ActionName="ShopPanel",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=I)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Up)
