--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -18,6 +18,8 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Buffer.Attack.Shoruken",DevComment="")
 +GameplayTagList=(Tag="Buffer.Attack.StepBack",DevComment="")
 +GameplayTagList=(Tag="Buffer.Attack.StepForward",DevComment="")
++GameplayTagList=(Tag="Damage.Critical",DevComment="")
++GameplayTagList=(Tag="Damage.Stun",DevComment="")
 +GameplayTagList=(Tag="Damage.Type.Physical",DevComment="")
 +GameplayTagList=(Tag="Damage.Type.Posture",DevComment="")
 +GameplayTagList=(Tag="Event.Montage",DevComment="")
@@ -35,5 +37,6 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="ItemType.Misc.Currency",DevComment="")
 +GameplayTagList=(Tag="ItemType.Misc.Ring",DevComment="")
 +GameplayTagList=(Tag="ItemType.Weapon.TwoHandedMace",DevComment="")
++GameplayTagList=(Tag="Trigger.Attack.Melee",DevComment="")
 
 
