--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -28,7 +28,7 @@ AgentMaxSlope=50.000000
 Compiler=VisualStudio2019
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Levels/LoginMap.LoginMap
+EditorStartupMap=/Game/Levels/NoPawn.NoPawn
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -37,7 +37,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/Blueprints/SoulGameInstance.SoulGameInstance_C
-GameDefaultMap=/Game/Levels/LoginMap.LoginMap
+GameDefaultMap=/Game/Levels/NoPawn.NoPawn
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Script/Engine.GameMode
 GlobalDefaultServerGameMode=None
@@ -86,5 +86,3 @@ PhysXTreeRebuildRate=10
 +PhysicalSurfaces=(Type=SurfaceType1,Name="Grass")
 +PhysicalSurfaces=(Type=SurfaceType2,Name="Rock")
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
-
