--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -5,6 +5,7 @@ WarnOnInvalidTags=True
 FastReplication=False
 InvalidTagCharacters="\"\',"
 +GameplayTagTableList=/Game/Ablities/Tags/Stance.Stance
++GameplayTagTableList=/Game/DataTables/Damages.Damages
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Ability.Melee",DevComment="")
@@ -23,10 +24,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Buffer.Parry",DevComment="")
 +GameplayTagList=(Tag="Buffer.Parry.Normal",DevComment="")
 +GameplayTagList=(Tag="Buffer.Parry.Perfect",DevComment="")
-+GameplayTagList=(Tag="Damage.Critical",DevComment="")
 +GameplayTagList=(Tag="Damage.Dot",DevComment="")
-+GameplayTagList=(Tag="Damage.Parry",DevComment="")
-+GameplayTagList=(Tag="Damage.Stun",DevComment="")
 +GameplayTagList=(Tag="Damage.Type.Physical",DevComment="")
 +GameplayTagList=(Tag="Damage.Type.Posture",DevComment="")
 +GameplayTagList=(Tag="Event.Montage",DevComment="")
