--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -28,7 +28,7 @@ AgentMaxSlope=50.000000
 Compiler=VisualStudio2019
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Levels/NoPawn.NoPawn
+EditorStartupMap=/Game/Levels/AI_Test.AI_Test
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
